# DistributedChess

./: .gitignore  architecture.md  docker-compose.yml  readme.md
Engine/: BitboardUtils.h  Board.cpp  Board.h  CMakeLists.txt  Dockerfile.engine  Search.cpp  Validator.cpp  main.cpp
backend/: Dockerfile  auth.go  db.go  game.go  go.mod  helpers.go  main.go  metrics.go  middleware.go  stats.go
engine/: Board.cpp  Board.h  CMakeLists.txt  Move.h  Search.cpp  Search.h  Validator.h  main.cpp
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: Auth.jsx  Dashboard.jsx  GameView.jsx  InfraDashboard.jsx
loadtest/: chess.js  refresh_test.sh
